--- a/Data_Preparation.ipynb
+++ b/Data_Preparation.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "img = Image.open('../galaxies/pgc50351_d25x2_rot_gri.sdss.jpg')\n",
+    "img = Image.open('galaxies/pgc50351_d25x2_rot_gri.sdss.jpg')\n",
     "\n",
     "plt.imshow(img)"
    ]
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inFile = '../../Jan/HI/augment/EDD_distance_cf4_v27.csv'\n",
+    "inFile = 'augment/EDD_distance_cf4_v27.csv'\n",
     "table  = np.genfromtxt(inFile , delimiter='|', filling_values=-1, names=True, dtype=None, encoding=None)\n",
     "pgc  = table['pgc']\n",
     "inc  = table['inc']\n",
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "im_root = '../galaxies/'\n",
+    "im_root = './galaxies/'\n",
     "for j, id in enumerate(pgc):\n",
     "    \n",
     "    im_path =  im_root+'pgc'+str(id)+'_d25x2_rot_gri.sdss.jpg'\n",
@@ -558,7 +558,7 @@
     }
    ],
    "source": [
-    "img = Image.open('../galaxies/pgc50351_d25x2_rot_gri.sdss.jpg')\n",
+    "img = Image.open('./galaxies/pgc50351_d25x2_rot_gri.sdss.jpg')\n",
     "\n",
     "plt.imshow(img)"
    ]
