--- a/im_scale_batch.ipynb
+++ b/im_scale_batch.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "inFile = '../../Jan/HI/augment/EDD_distance_cf4_v27.csv'\n",
+    "inFile = 'EDD_distance_cf4_v27.csv'\n",
     "table  = np.genfromtxt(inFile , delimiter='|', filling_values=-1, names=True, dtype=None)\n",
     "pgc  = table['pgc']\n",
     "inc  = table['inc']\n",
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "im_root = '../galaxies/'\n",
+    "im_root = './galaxies/'\n",
     "for j, id in enumerate(pgc):\n",
     "    \n",
     "    im_path =  im_root+'pgc'+str(id)+'_d25x2_rot_gri.sdss.jpg'\n",
