data preparation for AWS SageMaker

--- a/image2rec_AWS.ipynb
+++ b/image2rec_AWS.ipynb
@@ -269,7 +269,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "mkdir ./AWS_64x64_train\n"
+      "mkdir ./AWS_64x64_train\n",
+      "Problem: ./galaxies/pgc5057372_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc5059958_d25x2_rot_gri.sdss.jpg\n"
      ]
     }
    ],
