the process of data preparation

--- a/image2rec_AWS.ipynb
+++ b/image2rec_AWS.ipynb
@@ -193,6 +193,8 @@
     "        im_path =  im_root+'pgc'+str(id)+'_d25x2_rot_gri.sdss.jpg'\n",
     "\n",
     "        available = os.path.exists(im_path)\n",
+    "        \n",
+    "        jj = index[j]\n",
     "\n",
     "        if available:\n",
     "\n",
@@ -214,13 +216,13 @@
     "                ## 'F' stands for face-on\n",
     "                ## 'J' spirals with inclinations less than 45 deg from face-on\n",
     "                ## '45'-'90' spirals with inclinations between 45 and 90 deg\n",
-    "                fon = \" \".join(face_on[j].split())\n",
-    "                if ((fon == 'F' and inc_flg[j]>0) or (inc_flg[j]>0 and 'face_on' in inc_note[j])):\n",
+    "                fon = \" \".join(face_on[jj].split())\n",
+    "                if ((fon == 'F' and inc_flg[jj]>0) or (inc_flg[jj]>0 and 'face_on' in inc_note[jj])):\n",
     "                    label = 'F'\n",
-    "                elif inc_flg[j]>0:\n",
+    "                elif inc_flg[jj]>0:\n",
     "                    label = 'J'\n",
     "                else:\n",
-    "                    label = \"%d\"%inc[j]\n",
+    "                    label = \"%d\"%inc[jj]\n",
     "\n",
     "\n",
     "\n",
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,11 +273,25 @@
       "\n",
       "mkdir ./AWS_64x64_train\n",
       "Problem: ./galaxies/pgc5057372_d25x2_rot_gri.sdss.jpg\n",
-      "Problem: ./galaxies/pgc5059958_d25x2_rot_gri.sdss.jpg\n"
+      "Problem: ./galaxies/pgc5059958_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc5060016_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc5057040_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc5058874_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc3648947_d25x2_rot_gri.sdss.jpg\n",
+      "\n",
+      "mkdir ./AWS_64x64_val\n",
+      "Problem: ./galaxies/pgc5057571_d25x2_rot_gri.sdss.jpg\n",
+      "Problem: ./galaxies/pgc5058906_d25x2_rot_gri.sdss.jpg\n",
+      "\n",
+      "mkdir ./AWS_64x64_test\n",
+      "CPU times: user 25min 18s, sys: 4.93 s, total: 25min 22s\n",
+      "Wall time: 27min 20s\n"
      ]
     }
    ],
    "source": [
+    "%%time \n",
+    "\n",
     "N = len(pgc)\n",
     "indices = np.arange(N)\n",
     "indices = esn_shuffle(indices, seed=0)\n",
