AWS Sagemaker Notebook

--- a/incNET_dataPrep/incNET_dataClean.ipynb
+++ b/incNET_dataPrep/incNET_dataClean.ipynb
@@ -844,12 +844,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our research, we purposfully favored more edge-on galaxies, to "
+    "In our research, we purposfully favored more edge-on galaxies, because of lesser errors in their measured mistances, which is reflected in the following histogram."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "Text(0, 0.5, 'number of galaxies')"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     },
