a summary of data cleaning/wrangling

--- a/incNET_dataPrep/incNET_dataClean.ipynb
+++ b/incNET_dataPrep/incNET_dataClean.ipynb
@@ -81,8 +81,8 @@
     "\n",
     "A more detailed discussions of these measurements and their uncertainties are presented in these papers:\n",
     "\n",
-    "- Cosmicflows-4: The Catalog of ~10000 Tully-Fisher Distances (**Journal ref:** Kourkchi et al., 2020, ApJ, 902, 145, [arXiv:2009.00733](https://arxiv.org/pdf/2009.00733)) **Please refer to section 2.3**\n",
-    "- Global Attenuation in Spiral Galaxies in Optical and Infrared Bands (**Journal ref:** Kourkchi et al.,2019, ApJ, 884, 82, [arXiv:1909.01572](https://arxiv.org/pdf/1909.01572))\n",
+    "- Cosmicflows-4: The Catalog of ~10000 Tully-Fisher Distances (**Journal ref:** Kourkchi et al., 2020, ApJ, 902, 145, [arXiv:2009.00733](https://arxiv.org/pdf/2009.00733)) **refer to section 2.3**\n",
+    "- Global Attenuation in Spiral Galaxies in Optical and Infrared Bands (**Journal ref:** Kourkchi et al.,2019, ApJ, 884, 82, [arXiv:1909.01572](https://arxiv.org/pdf/1909.01572)) **refer to section 2.5**\n",
     "\n",
     "**NOTE:** This notebook is just touches the most important parts of preparing and evaluating inclination."
    ]
@@ -2967,19 +2967,12 @@
     "## References\n",
     "\n",
     "- Recovering the Structure and Dynamics of the Local Universe [(Ph.D. Thesis by E. Kourkchi - 2020) ](https://scholarspace.manoa.hawaii.edu/bitstream/10125/68946/Kourkchi_hawii_0085A_10582.pdf)\n",
-    "- Cosmicflows-4: The Catalog of ~10000 Tully-Fisher Distances (**Journal ref:** Kourkchi et al., 2020, ApJ, 902, 145, [arXiv:2009.00733](https://arxiv.org/pdf/2009.00733)) **Please refer to section 2.3**\n",
-    "- Global Attenuation in Spiral Galaxies in Optical and Infrared Bands (**Journal ref:** Kourkchi et al.,2019, ApJ, 884, 82, [arXiv:1909.01572](https://arxiv.org/pdf/1909.01572)) **Please refer to section 2.5**\n",
+    "- Cosmicflows-4: The Catalog of ~10000 Tully-Fisher Distances (**Journal ref:** Kourkchi et al., 2020, ApJ, 902, 145, [arXiv:2009.00733](https://arxiv.org/pdf/2009.00733)) **refer to section 2.3**\n",
+    "- Global Attenuation in Spiral Galaxies in Optical and Infrared Bands (**Journal ref:** Kourkchi et al.,2019, ApJ, 884, 82, [arXiv:1909.01572](https://arxiv.org/pdf/1909.01572)) **refer to section 2.5**\n",
     "- Galaxy Inclination Zoo [(GIZ)](http://edd.ifa.hawaii.edu/inclination/index.php)\n",
     "- [GIZ help page](edd.ifa.hawaii.edu/inclination/help.html)\n",
     "- [GIZ Blog](https://galinc.weebly.com/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
