a summary of data cleaning/wrangling

--- a/incNET_dataPrep/incNET_dataClean.ipynb
+++ b/incNET_dataPrep/incNET_dataClean.ipynb
@@ -2970,9 +2970,16 @@
     "- Cosmicflows-4: The Catalog of ~10000 Tully-Fisher Distances (**Journal ref:** Kourkchi et al., 2020, ApJ, 902, 145, [arXiv:2009.00733](https://arxiv.org/pdf/2009.00733)) **refer to section 2.3**\n",
     "- Global Attenuation in Spiral Galaxies in Optical and Infrared Bands (**Journal ref:** Kourkchi et al.,2019, ApJ, 884, 82, [arXiv:1909.01572](https://arxiv.org/pdf/1909.01572)) **refer to section 2.5**\n",
     "- Galaxy Inclination Zoo [(GIZ)](http://edd.ifa.hawaii.edu/inclination/index.php)\n",
-    "- [GIZ help page](edd.ifa.hawaii.edu/inclination/help.html)\n",
+    "- [GIZ help page](https://edd.ifa.hawaii.edu/inclination/help.html)\n",
     "- [GIZ Blog](https://galinc.weebly.com/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
