a summary of data cleaning/wrangling

--- a/incNET_dataPrep/incNET_dataClean.ipynb
+++ b/incNET_dataPrep/incNET_dataClean.ipynb
@@ -100,8 +100,8 @@
     "2. Citizen scientists and astronomy enthusiasts who helps us in this project\n",
     "\n",
     "The output tables of the SQL database have been stored in two tables:\n",
-    "- `EDD_incNET_Manoa.20190524.txt` for the UH students\n",
-    "- `EDD_incNET_Guest.20190524.txt` for the guest users\n"
+    "- [`EDD_incNET_Manoa.20190524.txt`](https://raw.githubusercontent.com/ekourkchi/incNET-data/master/incNET_dataPrep/EDD_incNET_Manoa.20190524.txt) for the UH students\n",
+    "- [`EDD_incNET_Guest.20190524.txt`](https://raw.githubusercontent.com/ekourkchi/incNET-data/master/incNET_dataPrep/EDD_incNET_Guest.20190524.txt) for the guest users\n"
    ]
   },
   {
@@ -2560,8 +2560,8 @@
    "source": [
     "## Final Catalog\n",
     "\n",
-    "The final catalog of inclinations and other relevant parameters that were produced during this research have been tabulated in table `EDD_distance_cf4_v27.csv` in this repository. [Click here](https://raw.githubusercontent.com/ekourkchi/incNET-data/master/EDD_distance_cf4_v27.csv) to open the table in your browser. Also this catalog is available in the extragalactic distance database [hosted here](http://edd.ifa.hawaii.edu/dfirst.php?) under the **Photometry Section** in the [CF4 Initial Candidates\n",
-    "](edd.ifa.hawaii.edu/describe_columns.php?table=kcf4cand) table."
+    "The final catalog of inclinations and other relevant parameters that were produced during this research have been tabulated in table `EDD_distance_cf4_v27.csv` in this repository. [Click here](https://raw.githubusercontent.com/ekourkchi/incNET-data/master/EDD_distance_cf4_v27.csv) to open the table in your browser. Also this catalog is available in the extragalactic distance database [hosted here](https://edd.ifa.hawaii.edu/dfirst.php?) under the **Photometry Section** in the [CF4 Initial Candidates\n",
+    "](https://edd.ifa.hawaii.edu/describe_columns.php?table=kcf4cand) table."
    ]
   },
   {
