reorganizing files and folders

--- a/incNET_exploreModels.ipynb
+++ b/incNET_exploreModels.ipynb
@@ -693,9 +693,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6h 53min 5s, sys: 3.69 s, total: 6h 53min 9s\n",
+      "Wall time: 6h 53min 1s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['test_XGB3.joblib']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time \n",
     "from xgboost import XGBClassifier\n",
@@ -707,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,6 +747,20 @@
     "model5.fit(Train_seed0['X'], Train_seed0['y']-45)\n",
     "dump(model5, 'test_XGB5.joblib')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
