minor changes of text

--- a/incNET_modelExploration/incNET_exploreModels.ipynb
+++ b/incNET_modelExploration/incNET_exploreModels.ipynb
@@ -1747,11 +1747,11 @@
     "\n",
     "On the other hand, fully connected neural network do not perform well. Practically, they are not useful and certainty not better than a traditional Nearest Neighbor algorithm.\n",
     "\n",
-    "Random Forest (RF) is the next best algorithm if one ever wants to choose a method other than CNN. Although, the performance of an RF is not better than CNN, the training process is fast and predictions are performed very rapidly.\n",
+    "Random Forest (RF) is the next best algorithm if one ever wants to choose a method other than CNN. Although the performance of an RF is not better than CNN, its training process is fast and predictions are performed very rapidly.\n",
     "\n",
     "XGboost is also another good alternative in this project. However, the model takes a lot of time to train and in the end its performance is comparable to that of RF.\n",
     "\n",
-    "In our case, k-NN also performs reasonably, however they are lazy, meaning that they are very fast to train and slow in prediction. Basically, k-NN doesn't need much of a training process, because all the calculations are carried out at the time of prediction. Therefore, they are not best choices when it comes to deploy the prediction model for fast evaluation of inclination of a large galaxy catalog. "
+    "In our case, k-NNs perform reasonably well. Nonetheless, they are lazy algorithms, i.e. they are very fast to train and slow in prediction. Basically, k-NN doesn't need much of a training process, because all the calculations are mostly carried out at the time of prediction. Therefore, k-NN is not the algorithm of choice in our project where the objective is the deployment of a fast model to evaluate the images of a large galaxy catalog. "
    ]
   },
   {
