--- a/incNET_dataPrep/Data_Preparation.ipynb
+++ b/incNET_dataPrep/Data_Preparation.ipynb
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the same index to display the recoverred image"
+    "## Using the same index to display the recovered image"
    ]
   },
   {
