saving npz files of the mother arrays

--- a/incNET_dataPrep/incNET_model_augmentation.ipynb
+++ b/incNET_dataPrep/incNET_model_augmentation.ipynb
@@ -36,19 +36,7 @@
    "metadata": {
     "id": "aE1MlQUynxP-"
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imgaug'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-8d01b03170c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimageio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mimgaug\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mia\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimgaug\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maugmenters\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0miaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imgaug'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install imgaug\n",
     "\n",
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "auBYbdadplip"
    },
@@ -229,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "NinwybnPObg_"
    },
@@ -262,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "O76pB3ZFObjy"
    },
@@ -276,12 +264,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3384, 129060)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N_testGray = len(pgcIDs_test_gray)\n",
+    "N_trainGray = len(pgcIDs_train_gray)\n",
+    "\n",
+    "N_testGray, N_trainGray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indx = np.arange(N_testGray)\n",
+    "indx = esn_shuffle(indx, seed=0)\n",
+    "\n",
+    "images_test_gray = images_test_gray[indx]\n",
+    "labels_test_gray = labels_test_gray[indx]\n",
+    "pgcIDs_test_gray = pgcIDs_test_gray[indx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indx = np.arange(N_trainGray)\n",
+    "indx = esn_shuffle(indx, seed=0)\n",
+    "\n",
+    "images_train_gray = images_train_gray[indx]\n",
+    "labels_train_gray = images_train_gray[indx]\n",
+    "pgcIDs_train_gray = images_train_gray[indx]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "VfWdcRu2Obqh"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.savez_compressed('./Gray_128x128_train_000.npz', \n",
+    "                    images=images_train_gray, \n",
+    "                    labels=labels_train_gray, \n",
+    "                    pgcIDs=pgcIDs_train_gray)\n",
+    "np.savez_compressed('./Gray_128x128_test_000.npz', \n",
+    "                    images=images_test_gray, \n",
+    "                    labels=labels_test_gray, \n",
+    "                    pgcIDs=pgcIDs_test_gray)"
+   ]
   },
   {
    "cell_type": "code",
@@ -290,7 +338,16 @@
     "id": "ZqDHrRgZLQeI"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.savez_compressed('./RGB_128x128_train_000.npz', \n",
+    "                    images=images_train_RGB, \n",
+    "                    labels=labels_train_RGB, \n",
+    "                    pgcIDs=pgcIDs_train_RGB)\n",
+    "np.savez_compressed('./RGB_128x128_test_000.npz', \n",
+    "                    images=images_test_RGB, \n",
+    "                    labels=labels_test_RGB, \n",
+    "                    pgcIDs=pgcIDs_test_RGB)"
+   ]
   },
   {
    "cell_type": "code",
@@ -381,9 +438,6 @@
    "source": [
     "import copy \n",
     "t1 = datetime.now()\n",
-    "\n",
-    "np.savez_compressed('/content/drive/My Drive/Colab Notebooks/Tsclased_128x128_trainaug_000.npz', images=images_train, labels=labels_train, pgcIDs=pgcIDs_train)\n",
-    "np.savez_compressed('/content/drive/My Drive/Colab Notebooks/Tsclased_128x128_testaug_000.npz', images=images_test, labels=labels_test, pgcIDs=pgcIDs_test)\n",
     "\n",
     "\n",
     "for j in range(25):\n",
