--- a/incNET_dataPrep/incNET_model_augmentation.ipynb
+++ b/incNET_dataPrep/incNET_model_augmentation.ipynb
@@ -72,6 +72,7 @@
     "    iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 3), per_channel=0.5),\n",
     "    iaa.Add((-5, 5), per_channel=0.5),\n",
     "    iaa.Multiply((0.8, 1.2), per_channel=0.5),\n",
+    "    iaa.Invert(0.05, per_channel=True),\n",
     "    iaa.Sometimes(0.1, iaa.Grayscale(alpha=(0.0, 1.0))),\n",
     "    iaa.Sometimes(0.50, iaa.Grayscale(alpha=1.)),\n",
     "    iaa.Affine(\n",
@@ -87,6 +88,7 @@
     "    iaa.GammaContrast(gamma=(0.97,1.03)),\n",
     "    iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 3), per_channel=0.5),\n",
     "    iaa.Add((-5, 5), per_channel=0.5),\n",
+    "    iaa.Invert(0.5, per_channel=False),\n",
     "    iaa.Multiply((0.8, 1.2), per_channel=0.5),\n",
     "    iaa.Affine(\n",
     "        rotate=(0, 359),\n",
@@ -365,7 +367,10 @@
     "id": "VG0pvBElLQi1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "N_trainRGB = len(pgcIDs_train_RGB)\n",
+    "N_testRGB = len(pgcIDs_test_RGB)"
+   ]
   },
   {
    "cell_type": "code",
@@ -436,27 +441,23 @@
     }
    ],
    "source": [
-    "import copy \n",
-    "t1 = datetime.now()\n",
-    "\n",
-    "\n",
-    "for j in range(25):\n",
-    "\n",
-    "  # images_train_aug = copy.deepcopy(images_train)\n",
-    "  # labels_train_aug = copy.deepcopy(labels_train)\n",
-    "  # pgcIDs_train_aug = copy.deepcopy(pgcIDs_train)\n",
-    "\n",
-    "  # images_test_aug = copy.deepcopy(images_test)\n",
-    "  # labels_test_aug = copy.deepcopy(labels_test)\n",
-    "  # pgcIDs_test_aug = copy.deepcopy(pgcIDs_test)\n",
-    "\n",
-    "\n",
-    "  for i in range(1):\n",
+    "for i in range(1):\n",
     "    \n",
-    "    dataAug = seq(images=images_train)\n",
-    "    images_train_aug = dataAug # np.concatenate((images_train_aug, dataAug)) \n",
-    "    labels_train_aug = labels_train # np.concatenate((labels_train_aug, labels_train)) \n",
-    "    pgcIDs_train_aug = pgcIDs_train # np.concatenate((pgcIDs_train_aug, pgcIDs_train)) \n",
+    "    images_train_aug_RGB = seq(images=images_train_RGB) \n",
+    "    labels_train_aug_RGB = labels_train_RGB\n",
+    "    pgcIDs_train_aug_RGB = pgcIDs_train_RGB\n",
+    "    \n",
+    "    # Gray\n",
+    "    indx = np.arange(N_trainGray)\n",
+    "    indx = esn_shuffle(indx, seed=i+10)\n",
+    "    images_train_gray = images_train_gray[indx][:N_trainRGB,:,:,:]\n",
+    "    labels_train_gray = images_train_gray[indx][:N_trainRGB]\n",
+    "    pgcIDs_train_gray = images_train_gray[indx][:N_trainRGB]\n",
+    "    \n",
+    "    images_train_aug_gray = seq(images=images_train_gray) \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "    dataAug = seq(images=images_test)\n",
     "    images_test_aug = dataAug # np.concatenate((images_test_aug, dataAug)) \n",
