batching over the augmentation process to save RAM

--- a/incNET_dataPrep/incNET_model_augmentation.ipynb
+++ b/incNET_dataPrep/incNET_model_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "VsCNiJ1YiFgw"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "aE1MlQUynxP-"
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "auBYbdadplip"
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "PezjoGM10tM-"
    },
@@ -252,20 +252,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "id": "O76pB3ZFObjy"
-   },
-   "outputs": [],
-   "source": [
-    "def esn_shuffle(array, seed=0):\n",
-    "        np.random.seed(seed)\n",
-    "        np.random.shuffle(array)\n",
-    "        return array"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -317,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "VfWdcRu2Obqh"
    },
@@ -335,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "ZqDHrRgZLQeI"
    },
@@ -352,24 +338,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "bnF9weJtLQgf"
    },
+   "source": [
+    "### Run this part separately ....."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "id": "O76pB3ZFObjy"
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def esn_shuffle(array, seed=0):\n",
+    "        np.random.seed(seed)\n",
+    "        np.random.shuffle(array)\n",
+    "        return array"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = np.load('./Gray_128x128_train_000.npz')\n",
+    "# images_ = data['images'].astype(np.uint8)\n",
+    "# labels_ = data['labels'] \n",
+    "# # data.close() \n",
+    "# del data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('./Gray_128x128_train_000.npz')\n",
+    "images_ = data['images'].astype(np.uint8)\n",
+    "labels_ = data['labels'] \n",
+    "pgcIDs_ = labels_[0]\n",
+    "labels_ = labels_[1]\n",
+    "data.close() \n",
+    "del data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "id": "VG0pvBElLQi1"
    },
    "outputs": [],
    "source": [
-    "N_trainRGB = len(pgcIDs_train_RGB)\n",
-    "N_testRGB = len(pgcIDs_test_RGB)"
+    "N_trainRGB = 42030\n",
+    "N_testRGB = 1128\n",
+    "N_trainGray = 129060\n",
+    "N_testGray = 3384"
    ]
   },
   {
@@ -382,95 +412,53 @@
     "id": "ICHSY9Qs1MJw",
     "outputId": "42522c27-aa9d-4a43-bf9a-6293d24e4426"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Execution time:  0 0:04:52.428852\n",
-      "save # 0\n",
-      "Execution time:  0 0:09:44.503527\n",
-      "save # 1\n",
-      "Execution time:  0 0:14:40.173470\n",
-      "save # 2\n",
-      "Execution time:  0 0:19:33.536470\n",
-      "save # 3\n",
-      "Execution time:  0 0:25:15.983512\n",
-      "save # 4\n",
-      "Execution time:  0 0:30:07.267499\n",
-      "save # 5\n",
-      "Execution time:  0 0:35:29.748691\n",
-      "save # 6\n",
-      "Execution time:  0 0:40:18.888320\n",
-      "save # 7\n",
-      "Execution time:  0 0:45:02.920305\n",
-      "save # 8\n",
-      "Execution time:  0 0:49:56.648657\n",
-      "save # 9\n",
-      "Execution time:  0 0:55:35.584290\n",
-      "save # 10\n",
-      "Execution time:  0 1:01:11.237501\n",
-      "save # 11\n",
-      "Execution time:  0 1:06:04.594874\n",
-      "save # 12\n",
-      "Execution time:  0 1:11:52.217900\n",
-      "save # 13\n",
-      "Execution time:  0 1:17:23.443271\n",
-      "save # 14\n",
-      "Execution time:  0 1:22:25.642447\n",
-      "save # 15\n",
-      "Execution time:  0 1:28:03.952067\n",
-      "save # 16\n",
-      "Execution time:  0 1:33:07.103613\n",
-      "save # 17\n",
-      "Execution time:  0 1:38:39.679928\n",
-      "save # 18\n",
-      "Execution time:  0 1:44:23.401976\n",
-      "save # 19\n",
-      "Execution time:  0 1:49:29.561257\n",
-      "save # 20\n",
-      "Execution time:  0 1:54:53.302962\n",
-      "save # 21\n",
-      "Execution time:  0 2:00:05.356266\n",
-      "save # 22\n",
-      "Execution time:  0 2:05:40.382972\n",
-      "save # 23\n",
-      "Execution time:  0 2:11:09.498418\n",
-      "save # 24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1):\n",
     "    \n",
-    "    images_train_aug_RGB = seq(images=images_train_RGB) \n",
-    "    labels_train_aug_RGB = labels_train_RGB\n",
-    "    pgcIDs_train_aug_RGB = pgcIDs_train_RGB\n",
-    "    \n",
+    "    # RGB\n",
+    "#     images_train_aug = seq(images=images_) \n",
+    "#     labels_train_aug = labels_\n",
+    "#     pgcIDs_train_aug = pgcIDs_\n",
+    "\n",
     "    # Gray\n",
     "    indx = np.arange(N_trainGray)\n",
     "    indx = esn_shuffle(indx, seed=i+10)\n",
-    "    images_train_gray = images_train_gray[indx][:N_trainRGB,:,:,:]\n",
-    "    labels_train_gray = images_train_gray[indx][:N_trainRGB]\n",
-    "    pgcIDs_train_gray = images_train_gray[indx][:N_trainRGB]\n",
-    "    \n",
-    "    images_train_aug_gray = seq(images=images_train_gray) \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    dataAug = seq(images=images_test)\n",
-    "    images_test_aug = dataAug # np.concatenate((images_test_aug, dataAug)) \n",
-    "    labels_test_aug = labels_test # np.concatenate((labels_test_aug, labels_test)) \n",
-    "    pgcIDs_test_aug = pgcIDs_test # np.concatenate((pgcIDs_test_aug, pgcIDs_test)) \n",
-    "\n",
+    "    images_train_aug = seqGray(images=images_[indx][:N_trainRGB,:,:,:])\n",
+    "    labels_train_aug = labels_[indx][:N_trainRGB]\n",
+    "    pgcIDs_train_aug = pgcIDs_[indx][:N_trainRGB]\n",
     "\n",
     "    t2 =  datetime.now()\n",
     "    print(\"Execution time: \", i, t2-t1)\n",
     "\n",
-    "  np.savez_compressed('/content/drive/My Drive/Colab Notebooks/Tsclased_128x128_trainaug_'+str(j)+'.npz', images=images_train_aug, labels=labels_train_aug, pgcIDs=pgcIDs_train_aug)\n",
-    "  np.savez_compressed('/content/drive/My Drive/Colab Notebooks/Tsclased_128x128_testaug_'+str(j)+'.npz', images=images_test_aug, labels=labels_test_aug, pgcIDs=pgcIDs_test_aug)\n",
-    "  print('save #', j)"
+    "    np.savez_compressed('./Gray_128x128_train_aug_'+str(i)+'.npz', images=images_train_aug, labels=labels_train_aug, pgcIDs=pgcIDs_train_aug)\n",
+    "    print('save #', j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "m = 10\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=n, ncols=m, figsize=(15,15)) \n",
+    "\n",
+    "t = 0 \n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "\n",
+    "        ax = axes[i][j]\n",
+    "        ax.imshow(images_train_aug[t,:,:])\n",
+    "\n",
+    "        plt.setp(ax.get_xticklabels(), visible=False)\n",
+    "        plt.setp(ax.get_yticklabels(), visible=False)\n",
+    "\n",
+    "        t+=1\n",
+    "  \n",
+    "plt.subplots_adjust(hspace=0.03, wspace=0.03)"
    ]
   }
  ],
