--- a/incNET_CNN_Colabs/Prototype_RGB64x64_VGGregression.ipynb
+++ b/incNET_CNN_Colabs/Prototype_RGB64x64_VGGregression.ipynb
@@ -2062,6 +2062,29 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3RK6WgAsK4bS"
+      },
+      "source": [
+        "## Summary\n",
+        "\n",
+        "In this notebook, we trained three different models, all of which treat the problem as a regression problem. \n",
+        "\n",
+        "[](In another notebook), we explore the possibility of getting similar (or slightly) better results by invoking the classification techniques, and loss functions. \n",
+        "\n",
+        "\n",
+        "*   A basic CNN using the original sample of 64x64 images. We found out that the distribution of labels (inclinations) is not uniform. The last layer of the network is activated with a *Relu* function. It turned our that the measured in predicted values are in good agreement, however an inclination dependent bias is evident. We attributed to the non-uniformity of inclinations and the fact that inclinations span a finite range of number between 45 and 90 degrees.\n",
+        "*   We modified the CNN by changing the activation of the last layer to *Tanh*. We normalized images and linearly adjusted inclination to be compatible with the *Tanh* output ranging from -1 to 1. The bias is still evident, but the convergence is reached more quickly. Further tests seems to be necessary to make a concrete conclusion here. \n",
+        "*   We train the same CNN with *Tanh* output layer, but the training sample has been modified to has a uniform distribution of labels. We observe a better performance of the network, and the prediction-measurement bias has become smaller and less significant. \n",
+        "\n",
+        "**Further Notes: ** Using smaller batch sizes and training the model with more iterations help to minimize the bias. However part of the bias that originates from the finite coverage of the inclinations cannot be removed completely. \n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
