--- a/incNET_CNN_Colabs/Prototype_RGB64x64_VGGregression.ipynb
+++ b/incNET_CNN_Colabs/Prototype_RGB64x64_VGGregression.ipynb
@@ -2073,7 +2073,7 @@
         "\n",
         "In this notebook, we trained three different models, all of which treat the problem as a regression problem. \n",
         "\n",
-        "[](In another notebook), we explore the possibility of getting similar (or slightly) better results by invoking the classification techniques, and loss functions. \n",
+        "[In this notebook](https://github.com/ekourkchi/incNET-data/blob/master/incNET_CNN_Colabs/Prototype_RGB64x64_VGGclassification.ipynb), we explore the possibility of getting similar (or slightly) better results by invoking the classification techniques, and their associated loss functions. \n",
         "\n",
         "\n",
         "*   A basic CNN using the original sample of 64x64 images. We found out that the distribution of labels (inclinations) is not uniform. The last layer of the network is activated with a *Relu* function. It turned our that the measured in predicted values are in good agreement, however an inclination dependent bias is evident. We attributed to the non-uniformity of inclinations and the fact that inclinations span a finite range of number between 45 and 90 degrees.\n",
