--- a/incNET_CNN_Colabs/Prototype_RGB64x64_VGGclassification.ipynb
+++ b/incNET_CNN_Colabs/Prototype_RGB64x64_VGGclassification.ipynb
@@ -5,6 +5,9 @@
     "colab": {
       "name": "Prototype_RGB64x64_VGGclassification.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "to94liFGqPw6"
+      ],
       "machine_shape": "hm"
     },
     "kernelspec": {
@@ -941,17 +944,6 @@
         "\n",
         "Ultimately, this analysis recommends us to invoke the regression methodology to get more precise results. To minimize the bias, the labels of the training sample must be uniformed and *Tanh* can be leveraged for better convergence and limiting the network outputs."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "t1GCQVgGV_Xh"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
