Training with Augmented Images

--- a/incNET_VGGcnn_withAugmentation/128x128_Trainer_04.ipynb
+++ b/incNET_VGGcnn_withAugmentation/128x128_Trainer_04.ipynb
@@ -897,7 +897,7 @@
     "\n",
     "1. In panel #42, the galaxy image has been masked out because of the bright center of the galaxy has saturated the image at the center.\n",
     "2. Case #26 is a typical case, where the galaxy image has been projected next to a bright star.\n",
-    "3. Cases like #2, #14, and #23 have poor quality images.\n",
+    "3. Cases like #2, #14, #23, #29, #43 have poor quality images.\n",
     "4. Case #37 has been ruined in the data reduction process, when the telescope data has been preprocessed."
    ]
   },
