readme, small cosmetics

--- a/incNET_VGGcnn_withAugmentation/128x128_Trainer_04-binary.ipynb
+++ b/incNET_VGGcnn_withAugmentation/128x128_Trainer_04-binary.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Training with Augmented data\n",
     "\n",
-    "## Regression, determining good/bad galaxy images\n",
+    "## Classification, determining good/bad galaxy images\n",
     "\n",
     "In this notebook, we train a VGG model using the augmented data. Data augmentation has been done separately in another code and the output data has been stored on disk for the purpose of the following analysis.\n",
     "\n",
@@ -821,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
