--- a/incNET_VGGcnn_withAugmentation/128x128_Trainer_04.ipynb
+++ b/incNET_VGGcnn_withAugmentation/128x128_Trainer_04.ipynb
@@ -112,28 +112,28 @@
    "source": [
     "def vgg(input_shape=(128, 128, 3)):\n",
     "\n",
-    "\n",
     "    model = tf.keras.models.Sequential(name='VGG')\n",
     "\n",
-    "    model.add(tf.keras.layers.Conv2D(16, (3, 3), activation='relu', input_shape=input_shape, name='conv1'))\n",
+    "    model.add(tf.keras.layers.Conv2D(16, (3, 3), activation='relu', \n",
+    "                                     input_shape=input_shape, name='conv1'))\n",
     "    model.add(tf.keras.layers.Conv2D(16, (3, 3), activation='relu', name='conv2'))\n",
     "    model.add(tf.keras.layers.MaxPooling2D(pool_size=(2, 2)))\n",
     "    model.add(tf.keras.layers.Dropout(0.25))\n",
     "\n",
     "    model.add(tf.keras.layers.Conv2D(32, (3, 3), activation='relu', name='conv3'))\n",
     "    model.add(tf.keras.layers.Conv2D(32, (3, 3), activation='relu', name='conv4'))\n",
-    "    model.add(tf.keras.layers.BatchNormalization(axis = 3, name = 'bn_2'))\n",
+    "    model.add(tf.keras.layers.BatchNormalization(axis = 3, name = 'bn'))\n",
     "    model.add(tf.keras.layers.MaxPooling2D(pool_size=(4, 4)))\n",
     "    model.add(tf.keras.layers.Dropout(0.25))\n",
     "\n",
     "    ## Fully connected layers\n",
     "    model.add(tf.keras.layers.Flatten())\n",
-    "    model.add(tf.keras.layers.Dense(256, activation='relu', name='fc_2'))\n",
-    "    model.add(tf.keras.layers.Dense(32, activation='relu', name='fc_4'))\n",
-    "    model.add(tf.keras.layers.Dense(8, activation='relu', name='fc_5'))\n",
+    "    model.add(tf.keras.layers.Dense(256, activation='relu', name='fc_1'))\n",
+    "    model.add(tf.keras.layers.Dense(32, activation='relu', name='fc_2'))\n",
+    "    model.add(tf.keras.layers.Dense(8, activation='relu', name='fc_3'))\n",
     "    \n",
     "    # output layer\n",
-    "    model.add(tf.keras.layers.Dense(1, activation='tanh', name='fc_out2'))\n",
+    "    model.add(tf.keras.layers.Dense(1, activation='tanh', name='fc_out'))\n",
     "\n",
     "    return model\n",
     "\n",
@@ -179,7 +179,7 @@
       "_________________________________________________________________\n",
       "conv4 (Conv2D)               (None, 58, 58, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "bn_2 (BatchNormalization)    (None, 58, 58, 32)        128       \n",
+      "bn (BatchNormalization)      (None, 58, 58, 32)        128       \n",
       "_________________________________________________________________\n",
       "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
@@ -187,13 +187,13 @@
       "_________________________________________________________________\n",
       "flatten (Flatten)            (None, 6272)              0         \n",
       "_________________________________________________________________\n",
-      "fc_2 (Dense)                 (None, 256)               1605888   \n",
+      "fc_1 (Dense)                 (None, 256)               1605888   \n",
       "_________________________________________________________________\n",
-      "fc_4 (Dense)                 (None, 32)                8224      \n",
+      "fc_2 (Dense)                 (None, 32)                8224      \n",
       "_________________________________________________________________\n",
-      "fc_5 (Dense)                 (None, 8)                 264       \n",
+      "fc_3 (Dense)                 (None, 8)                 264       \n",
       "_________________________________________________________________\n",
-      "fc_out2 (Dense)              (None, 1)                 9         \n",
+      "fc_out (Dense)               (None, 1)                 9         \n",
       "=================================================================\n",
       "Total params: 1,631,169\n",
       "Trainable params: 1,631,105\n",
@@ -545,6 +545,47 @@
     "    gc.collect()\n",
     "\n",
     "    return evalDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def load_random_batch():\n",
+    "    \n",
+    "#     ### loding images and labels of a randomly selected traning batch\n",
+    "#     return images_train, labels_train\n",
+    "\n",
+    "# def trainer(epoch):\n",
+    "\n",
+    "#     ## initializing the model in the beginning of each iteration\n",
+    "#     model = Model_vgg()\n",
+    "#     model.compile(loss='mse', \n",
+    "#                       optimizer=tf.keras.optimizers.Adam(), \n",
+    "#                       metrics=['mse', 'mae'])\n",
+    "\n",
+    "#     if step>0:\n",
+    "#       ## if in the middle of the training process, I load the weights \n",
+    "#       ## of the network that was generated in the previous step\n",
+    "#       model.load_weights(\"weight_{}.dat\".foramt(epoch-1))\n",
+    "\n",
+    "#     images_train, labels_train = load_random_batch()\n",
+    "\n",
+    "#     model.fit(images_train, \n",
+    "#                   labels_train, \n",
+    "#                   epochs=1, \n",
+    "#                   batch_size=64, \n",
+    "#                   validation_data=(images_test, labels_test),\n",
+    "#                   verbose=1, \n",
+    "#                   shuffle=True)\n",
+    "\n",
+    "#     ## Taking an snapshot of the network to be used in the proceeding iteration\n",
+    "#     model.save_weights(\"weight_{}.dat\".foramt(epoch))\n",
+    "    \n",
+    "#     ## model.history holds valauble information on the performance metrics\n",
+    "#     return model.history"
    ]
   },
   {
@@ -973,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
